# ObsidianGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Dependencies/glm/: REVISION.txt
Scripts/: GenerateVisualStudioProject.bat
Sources/ObsidianGL/: CMakeLists.txt
Sources/ObsidianGL/include/ObsidianGL/: ObsidianGL.h
Sources/ObsidianGL/include/ObsidianGL/API/: Export.h  SIMDConfig.h
Sources/ObsidianGL/include/ObsidianGL/Buffers/: FrameBuffer.h
Sources/ObsidianGL/include/ObsidianGL/Geometry/: BoundingBox2D.h  Clipper.h  Triangle.h  Vertex.h
Sources/ObsidianGL/include/ObsidianGL/Graphics/: Color.h  Texture.h
Sources/ObsidianGL/include/ObsidianGL/Managers/: TextureManager.h
Sources/ObsidianGL/include/ObsidianGL/Utils/Bitwise/: Common.h
Sources/ObsidianGL/include/ObsidianGL/Utils/Memory/: Common.h
Sources/ObsidianGL/src/ObsidianGL/: ObsidianGL.cpp
Sources/ObsidianGL/src/ObsidianGL/Graphics/: Color.cpp
Sources/ObsidianGL/src/ObsidianGL/Managers/: TextureManager.cpp
Sources/ObsidianGL/src/ObsidianGL/Utils/Bitwise/: Common.cpp
Sources/OnyxEngine/: Cmakelists.txt  main.cpp
